# task_queue

./: .env.template  .gitignore  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 2024_12_07_0032-02bb88d6da42_added_tables_task_task_statuses.py
app/: __init__.py
app/api/: __init__.py  queue.py
app/dao/: task.py
app/models/: __init__.py  base.py  task.py
app/schemas/: responses.py  task.py
app/utils/: queue_worker.py
