[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
alembic = "^1.14.0"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

